--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       <H1>WELCOME</H1>
       <p id="info">"Kits" Beach, is located on Cornwall Ave at the north end of Yew Street. The Seawall runs along side the beach and Kitsilano Pool is at the west side</p>
           <a id="location"></a>
+          
+          <div class="overlay" onClick="style.pointerEvents='none'"></div>
           <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2603.0353912773976!2d-123.15418604999996!3d49.2757266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54867235a01f461d%3A0xa4855feea57361ac!2sKitsilano+Beach%2C+Vancouver%2C+BC!5e0!3m2!1sen!2sca!4v1428268110836"></iframe>
       </div>
       
@@ -127,7 +129,6 @@ Passes accepted: Flexipass, Leisure Access Card (LAC)</p>
     <div id="footer">
         <img id="logo2" src="img/logo.png"/>
         <p>Kitsilano Beach</p>
-        <p id="footerl">1499 Arbutus Street (@ Cornwall Avenue) </p>
     </div>
     </div>
 
